@startuml erd
title ER
entity User {
  * userId(pk)
  --
  privatechannelId(fk)
}
entity PrivateChannel {
  * id(pk)
  --
  * permanent
  * voicechannelId
  roleId
  textchannelId
}
entity BotMessage {
  * id(pk)
  --
  * key
  * messageId(fk)
  * enable
  * createrId(fk)
}
entity Message {
  * id(pk)
  --
  uri
  content
}
entity Reminder {
  * id(pk)
  --
  * interval
  * triggerAt
  * messageId(fk)
  * channelId
  * userId(fk)
}
BotMessage }o--|| User
User }o--|| PrivateChannel
Reminder }o--|| User
Message ||--|| Reminder
Message ||--|| BotMessage
@enduml